# Cpp-OOP

./: Project1.sln  Project1.vcxproj
Lab2/: bit_array_class.cpp  bit_array_class.h
lab1/: CMakeLists.txt  head.h  main.cpp  test.cpp  word_counter.cpp  word_counter.h
lab1/Task_1a/: CMakeLists.txt  main.cpp  module2.cpp  module2.h  module3.cpp  module3.h  task1_test.cpp  task2_test.cpp
lab2/: CMakeLists.txt  bit_array_class.cpp  bit_array_class.h  main.cpp  test.cpp
lab3/: .gitignore  CMakeLists.txt  GameLife.cpp  GameLife.h  main.cpp  test.cpp
lab3/Fields/: Field_1.txt  Field_2.txt  Field_3.txt  Field_4.txt
